// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KeyMappingService > overwriteAndAddExistingKeyBindingsV2 > add key to base 1`] = `
[
  {
    "command": "cursorUp",
    "key": "<ArrowUp>",
  },
]
`;

exports[`KeyMappingService > overwriteAndAddExistingKeyBindingsV2 > add key to other 1`] = `
[
  {
    "command": "cursorUp",
    "key": "k",
  },
]
`;

exports[`KeyMappingService > overwriteAndAddExistingKeyBindingsV2 > combo - overwrite and push 1`] = `
[
  {
    "command": "cursorRight",
    "key": "<ArrowRight>",
  },
  {
    "command": "cursorRight",
    "key": "l",
  },
  {
    "command": "redo",
    "key": "l",
  },
  {
    "command": "cursorRight",
    "context": [
      "Grid",
    ],
    "key": "<leader>l",
  },
]
`;

exports[`KeyMappingService > overwriteAndAddExistingKeyBindingsV2 > init 1`] = `
[
  {
    "key": "<Space>cl",
  },
]
`;

exports[`KeyMappingService > overwriteAndAddExistingKeyBindingsV2 > overwrite with base 1`] = `
[
  {
    "command": "cursorRight",
    "key": "<ArrowRight>",
  },
  {
    "command": "cursorRight",
    "context": [
      "Grid",
    ],
    "key": "l",
  },
]
`;

exports[`KeyMappingService > overwriteAndAddExistingKeyBindingsV2 > overwrite, but keep different key 1`] = `
[
  {
    "command": "cursorRight",
    "key": "<ArrowRight>",
  },
  {
    "command": "cursorRight",
    "key": "l",
  },
  {
    "command": "cursorRight",
    "context": [
      "Grid",
    ],
    "key": "r",
  },
]
`;

exports[`KeyMappingService > overwriteAndAddExistingKeyBindingsV2 > overwrite, if not matching key 1`] = `
[
  {
    "command": "cursorUp",
    "key": "<ArrowUp>",
  },
]
`;
